report done and sim reset to original fun values

--- a/EricSherman_FinalProject.ipynb
+++ b/EricSherman_FinalProject.ipynb
@@ -7,28 +7,20 @@
    "source": [
     "# Implementing Digital Control Systems and Simulating Inverted Penedulum\n",
     "\n",
+    "## REQUIREMENTS\n",
     "\n",
-    "### References and uses\n",
+    "PLEASE INSTALL PYTHON CONTROL SYSTEM LIBRARY <br>\n",
+    "THE LIBRARY CAN BE FOUND HERE: https://python-control.readthedocs.io/en/0.9.1/intro.html <br>\n",
     "\n",
-    "umich stuff\n",
-    "1) https://ctms.engin.umich.edu/CTMS/index.php?example=InvertedPendulum&section=SystemModeling -> umich system model\n",
-    "2) https://ctms.engin.umich.edu/CTMS/index.php?example=InvertedPendulum&section=SimulinkModeling ->  umich building the model in simulink\n",
+    "Commands: <br>\n",
+    "<i>conda install numpy scipy matplotlib    # if not yet installed <br>\n",
+    "conda install -c conda-forge control slycot <br> </i>\n",
     "\n",
-    "3) heres another system model https://www.cantorsparadise.com/modelling-and-simulation-of-inverted-pendulum-5ac423fed8ac\n",
+    "## REPORT\n",
     "\n",
-    "4) heres another hardware / simulation project with some really good sims https://create.arduino.cc/projecthub/zjor/inverted-pendulum-on-a-cart-199d6f\n",
+    "Please see the report PDF included in the repository. It covers the theory of operation and scenarios that can be run. \n",
     "\n",
-    "\n",
-    "2) https://www.bartleby.com/solution-answer/chapter-10-problem-18pe-college-physics-1st-edition/9781938168000/starting-with-the-formula-for-the-moment-of-inertia-of-a-rod-rotated-around-an-axis-through-one-end/f7039645-7ded-11e9-8385-02ee952b546e -> moment of inertia for the rod\n",
-    "\n",
-    "6) state space representation https://en.wikipedia.org/wiki/State-space_representation\n",
-    "\n",
-    "7) NEED TO DOWNLOAD THIS https://python-control.readthedocs.io/en/0.8.4/intro.html\n",
-    "\n",
-    "https://fab.cba.mit.edu/classes/864.17/people/copplestone/final_project/index.html\n",
-    "\n",
-    "\n",
-    "creds to tom, matt and dr. mao"
+    "\n"
    ]
   },
   {
@@ -41,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 92,
    "id": "a4bf3eb1",
    "metadata": {
     "scrolled": false
@@ -80,13 +72,13 @@
       " [  0.           1.39534884  -0.45429962 -13.20849737]\n",
       " [  1.39534884  -0.45429962 -13.20849737   4.83292242]]\n",
       "The plant is controllable: True\n",
-      "[30, 1, 200, 10]\n",
-      "[[ 30   0   0   0]\n",
-      " [  0   1   0   0]\n",
-      " [  0   0 200   0]\n",
-      " [  0   0   0  10]]\n",
+      "[100, 1, 1000, 10]\n",
+      "[[ 100    0    0    0]\n",
+      " [   0    1    0    0]\n",
+      " [   0    0 1000    0]\n",
+      " [   0    0    0   10]]\n",
       "K matrix from LQR:\n",
-      " [[173.20508076 138.77979025 511.28401682 -50.86126906]]\n"
+      " [[ 316.22776602  245.55570205  913.48784485 -171.82677383]]\n"
      ]
     },
     {
@@ -96,7 +88,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_17344\\334987315.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    378\u001b[0m \u001b[1;31m# while False:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    379\u001b[0m     \u001b[1;31m# limit the speed that the while loop executes\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 380\u001b[1;33m     \u001b[0mrate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msim_inputs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msim_rate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    381\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    382\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0msim_inputs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrack_cart\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_17344\\773612374.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    378\u001b[0m \u001b[1;31m# while False:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    379\u001b[0m     \u001b[1;31m# limit the speed that the while loop executes\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 380\u001b[1;33m     \u001b[0mrate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msim_inputs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msim_rate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    381\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    382\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0msim_inputs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrack_cart\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\anaconda3\\envs\\ece1180\\lib\\site-packages\\vpython\\rate_control.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, N)\u001b[0m\n\u001b[0;32m    258\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrval\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mN\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    259\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrval\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"rate value must be greater than or equal to 1\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 260\u001b[1;33m         \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_RateKeeper2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__call__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrval\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m## calls __call__ in rate_control.py\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    261\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    262\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\anaconda3\\envs\\ece1180\\lib\\site-packages\\vpython\\rate_control.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, maxRate)\u001b[0m\n\u001b[0;32m    212\u001b[0m             \u001b[0mdt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlastSleep\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcalls\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0muserTime\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcallTime\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdelay\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    213\u001b[0m                  \u001b[0mrenders\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrenderTime\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0msleeps\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minteractionPeriod\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0m_clock\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 214\u001b[1;33m             \u001b[0m_sleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    215\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlastSleep\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_clock\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    216\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcalls\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\anaconda3\\envs\\ece1180\\lib\\site-packages\\vpython\\rate_control.py\u001b[0m in \u001b[0;36m_sleep\u001b[1;34m(dt)\u001b[0m\n\u001b[0;32m     54\u001b[0m         \u001b[0mdtsleep\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnticks\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0m_tick\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     55\u001b[0m         \u001b[0mt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_clock\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 56\u001b[1;33m         \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdtsleep\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     57\u001b[0m         \u001b[0mt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_clock\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     58\u001b[0m         \u001b[0mdt\u001b[0m \u001b[1;33m-=\u001b[0m \u001b[0mt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
@@ -390,11 +382,10 @@
     "    rod_mass = 0.2 #kg\n",
     "    rod_length = 1 #meters\n",
     "    rod_inertia = rod_mass*(rod_length**2)/3\n",
-    "    rod_starting_angle = -math.pi/12 #from vertical, positive is to the left of the vertical\n",
+    "    rod_starting_angle = -math.pi/7 #from vertical, positive is to the left of the vertical\n",
     "    \n",
     "    #force is applied to the cart and is initial disturbance for the system.\n",
-    "    #init_force = 800 #netwons\n",
-    "    init_force = -300\n",
+    "    init_force = 800\n",
     "    \n",
     "    # limits enforced on the controller, does not effect the initial force\n",
     "    max_force_limit = 10 #newtons\n",
@@ -409,12 +400,13 @@
     "    # for Q matrix for LQR controller\n",
     "    # weights = [1,1,1000,100] #unstable controller (saved by limits)\n",
     "    # weights = [10,1,1000,10] #triple disturbance weights\n",
-    "    weights = [30,1,200,10] #verification weights\n",
-    "    # weights = [10,1,10,1]\n",
+    "    # weights = [30,1,200,10] #verification weights\n",
+    "    # weights = [100, 1, 1000, 1] #unstable/stable oscillatory response\n",
+    "    weights = [100,1,1000,10]\n",
     "    \n",
     "    # the desired end state for the system\n",
     "    # in order: final x pos for cart, final cart vel, final angle for rod, final ang vel for rod\n",
-    "    end_state = np.array([[0],[0],[0],[0]])\n",
+    "    end_state = np.array([[1],[0],[0],[0]])\n",
     "    \n",
     "    #time\n",
     "    t = 0\n",
@@ -423,12 +415,12 @@
     "    t_end = 20\n",
     "    \n",
     "    # disturbance 1\n",
-    "    rod_disturbance_on = False\n",
+    "    rod_disturbance_on = True\n",
     "    rod_disturbance_at_time = 7\n",
     "    rod_disturbance_angle = -math.pi/6\n",
     "    \n",
     "    #disturbance 2\n",
-    "    cart_disturbance_on = False\n",
+    "    cart_disturbance_on = True\n",
     "    cart_disturbance_at_time = 10\n",
     "    cart_disturbance_force = 9\n",
     "    cart_disturbance_over_num_steps = 30\n",
@@ -541,7 +533,7 @@
     "        f4.plot(sim_inputs.t, 0)\n",
     "    else: \n",
     "        linearization_label.text = f'Linearization: Valid'\n",
-    "        f4.plot(sim_inputs.t, 1)\n",
+    "        f4.plot(sim_inputs.t, degrees(0.45))\n",
     "    \n",
     "    # setup for next iterations\n",
     "    plant_dynam.setup_next_run()\n",
